# Discord-Auto-Bot

./: .env  CMakeLists.txt  README.md
src/: Bot.cpp  Bot.h  Logger.h  main.cpp
